--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,4 +1,6 @@
-<app-headers titulo = "Action Sheet"></app-headers>
-<ion-content>
-
+<app-headers titulo="Action Sheet"></app-headers>
+<ion-content class="ion-padding">
+    <ion-button (click)="onClick()" expand="block">
+        mostrar action-sheet
+    </ion-button>
 </ion-content>
