--- a/src/app/pages/fab/fab.page.html
+++ b/src/app/pages/fab/fab.page.html
@@ -13,15 +13,27 @@
         <ion-fab-button>
             <ion-icon name="add"></ion-icon>
         </ion-fab-button>
-        <ion-fab-list side="top">                                                                                                                             ">
-            <ion-fab-button (click)="onClickFab()"><ion-icon name="logo-facebook"></ion-icon></ion-fab-button>
-            <ion-fab-button><ion-icon name="logo-twitter"></ion-icon></ion-fab-button>
-            <ion-fab-button><ion-icon name="logo-youtube"></ion-icon></ion-fab-button>
+        <ion-fab-list side="top"> ">
+            <ion-fab-button (click)="onClickFab()">
+                <ion-icon name="logo-facebook" color="facebook"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button>
+                <ion-icon name="logo-twitter" color="twitter"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button>
+                <ion-icon name="logo-youtube" color="youtube"></ion-icon>
+            </ion-fab-button>
         </ion-fab-list>
-        <ion-fab-list side="start">                                                                                                                             ">
-            <ion-fab-button (click)="onClickFab()"><ion-icon name="logo-vimeo"></ion-icon></ion-fab-button>
-            <ion-fab-button><ion-icon name="logo-google"></ion-icon></ion-fab-button>
-            <ion-fab-button><ion-icon name="logo-github"></ion-icon></ion-fab-button>
+        <ion-fab-list side="start"> ">
+            <ion-fab-button (click)="onClickFab()">
+                <ion-icon name="logo-vimeo" color="primary"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button>
+                <ion-icon name="logo-google"  color="google"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button>
+                <ion-icon name="logo-github"  color="github"></ion-icon>
+            </ion-fab-button>
         </ion-fab-list>
     </ion-fab>
 
@@ -33,7 +45,7 @@
 </ion-content>
 
 <ion-footer>
-    <ion-toolbar>
+    <ion-toolbar color="youtube">
         <ion-title>Footer</ion-title>
     </ion-toolbar>
 </ion-footer>
