--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,12 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title color="primary">Componentes</ion-title>
+    <!--Boton que ya integra la vista del menu sliding, se relaciona con el menuId-->
+    <ion-buttons slot="start">
+      <ion-menu-button menu="first" color="primary"></ion-menu-button>
+    </ion-buttons>
+    <!--forma complicada de hacerlo-->
+    <!-- <ion-buttons slot="start">
+      <ion-button (click)="mostrartMenu()">
+        <ion-icon slot="icon-only" color="primary" name="menu-outline"></ion-icon></ion-button>
+    </ion-buttons>
+    <ion-title color="primary">Componentes</ion-title> -->
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let componente of componentes" [routerLink]="componente.redirectTo" detail="true"><!--con detail = 'true' o solo detail, hace que le agregue una flecha al final que indica que se puede clickera, ios lo incluye por default-->
+    <ion-item *ngFor="let componente of componentes | async" [routerLink]="componente.redirectTo" detail="true"><!--con detail = 'true' o solo detail, hace que le agregue una flecha al final que indica que se puede clickera, ios lo incluye por default-->
       <ion-icon slot="start" [name]="componente.icon"></ion-icon>
       <ion-label>
         {{componente.name}}
