estilos y trasnparencia en android e ios

--- a/src/app/components/headers/headers.component.html
+++ b/src/app/components/headers/headers.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="ion-no-border" translucent ><!--Clase para quitar el borde del header, translucent, sirve para hacer la transparencia del header-->
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/" text="Atras" color="primary" mode="ios">
