--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="ion-no-border"><!--Clase para quitar la línea del borde-->
   <ion-toolbar>
     <!--Boton que ya integra la vista del menu sliding, se relaciona con el menuId-->
     <ion-buttons slot="start">
